Bug 167161 - Number format dialog shows (wrong) number format for a selection having different number locales
Summary: Number format dialog shows (wrong) number format for a selection having diffe...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-22 13:54 UTC by Mike Kaganski
Modified: 2025-06-30 11:36 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2025-06-22 13:54:50 UTC
In a new Calc document:

1. Select A1:A2;
2. Open Number Format dialog (Ctrl+1) on Numbers tab;
3. Select Language: English (USA) - note that it's not "default" element;
4. Select Format: -1234.57 (third from top in the list);
5. [OK];
6. Select A2 (one of the cells selected on step 1);
7. Open Number Format dialog (Ctrl+1) on Numbers tab;
8. Select Language: German (Germany) - note that it's not "default" element;
9. Select Format: -1234,57 (third from top in the list);
10. [OK];
11. Select A1:A2;
12. Open Number Format dialog (Ctrl+1) on Numbers tab.

=> the dialog shows "default" in Language selector, and the third number format in the list.

This is a wrong behavior. For comparison, in the step 9 above, select any other element, not the third from top, and see the result in step 12: it will be the dialog without format and language selected at all, which is how it must be.
Comment 1 Mike Kaganski 2025-06-22 14:28:07 UTC
https://gerrit.libreoffice.org/c/core/+/186794
Comment 2 Commit Notification 2025-06-22 16:08:06 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ae245ce3147468449dc5c3844245d4eed654d3c6

tdf#167161: different ATTR_LANGUAGE_FORMAT mean different number formats

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-06-30 11:36:43 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/91f79e292c263418d4171c86e062764bd7687b3f

tdf#167161: different ATTR_LANGUAGE_FORMAT mean different number formats

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.