tdf#167161: different ATTR_LANGUAGE_FORMAT mean different number formats

Extend ScPatternAttr::HasNumberFormat to check ATTR_LANGUAGE_FORMAT
when detecting different number formats, which will disable controls
in SvxNumberFormatTabPage::Reset (see handling of pValFmtAttr there).
Also invalidate ATTR_VALUE_FORMAT explicitly in ExecuteCellFormatDlg,
when HasNumberFormat returned false.

Change-Id: I7c415903e71149f4fabb98840fae36e2379d4830
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186794
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186944